assets/css/main.css
@font-face {
  font-family: 'Orator Std';
  src: url('../fonts/OratorStd.eot');
  src: url('../fonts/OratorStd.eot?#iefix') format('embedded-opentype'),
    url('../fonts/OratorStd.woff2') format('woff2'),
    url('../fonts/OratorStd.woff') format('woff'),
    url('../fonts/OratorStd.ttf') format('truetype'),
    url('../fonts/OratorStd.svg#OratorStd') format('svg');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'Chalkduster';
  src: url('../fonts/Chalkduster.eot');
  src: url('../fonts/Chalkduster.eot?#iefix') format('embedded-opentype'),
    url('../fonts/Chalkduster.woff2') format('woff2'),
    url('../fonts/Chalkduster.woff') format('woff'),
    url('../fonts/Chalkduster.ttf') format('truetype'),
    url('../fonts/Chalkduster.svg#Chalkduster') format('svg');
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: 'Orator Std';
}

.wrap-container {
  position: relative;
  max-width: 1170px; 
  display: block; 
  margin: 0 auto;
}

.starter-template {
  padding: 40px 15px;
  text-align: center;
}

/* Navigation bar */

@media (max-width: 768px) {
  .nav-over {
    padding-left: 15px  !important;
  }
}

@media (min-width: 768px) {
  .container>.navbar-header {
    margin-right: 150px;
  }
}

.navbar-nav>li>a {
  color: black;
  font-size: 1em;
}

.icon-bar {
  background-color: black;
}

.nav>li>a {
  padding-right: 25px;
  padding-left: 25px;
}

.nav-over {
  position: absolute;
  top: 60px;
  left: 0px;
  width: 100%;
  padding-left: 120px;
}

.nav-over>.container {
  width: 100%;
}

.nav-bg {
  margin-top: 50px;
  position: absolute;
  top: 0px;
  background-color: white;
  filter:alpha(opacity=60); /* IE */
  -moz-opacity:0.6; /* Mozilla */
  opacity: 0.6; /* CSS3 */
  right: 0px;
  height: 70px;
  width: 100%;
}

/**/

.black-box {
  background-color: black;
  padding: 40px 70px 35px 70px;
  color: white;
  display: inline-block;
  font-size: 1em;
}

.green-box {
  background-color: #94d08a;
  padding: 50px 50px 20px 50px;
  color: black;
  width: 450px;
  text-align: center;
  font-size: 1em;
}

.concept-box {
  background-color: white;
  filter:alpha(opacity=60); /* IE */
  -moz-opacity:0.6; /* Mozilla */
  opacity: 0.6; /* CSS3 */
  padding: 20px 10px 20px 10px;
}

.footer-socials {
  font-size: 1.5em; 
  position: absolute; 
  top: 50%; 
  left: 50%; 
  transform: translate(-50%, -50%);
}

.footer {
  padding: 15px 30px 0px 0px; 
  float: right; 
  font-family: 'Chalkduster';
  color: black;
  font-size: 0.7em;
}

.footer-over {
  padding: 15px 30px 0px 0px; 
  float: right; 
  font-family: 'Chalkduster';
  color: black;
  background-color: white;
  filter:alpha(opacity=60); /* IE */
  -moz-opacity:0.6; /* Mozilla */
  opacity: 0.6; /* CSS3 */
  width: 100%;
  text-align: right;
  font-size: 0.7em;
}

